--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "run_at": "document_idle"
     }
   ],
-  "permissions": ["tabs"],
+  "permissions": [],
   "browser_action": {
     "default_popup": "popup/popup.html"
   },
