--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "manifest_version": 2,
   "description": "Trello++ helps you use trello as a developer",
+  "icons": { "16": "images/logo16.png", "48": "images/logo48.png", "128": "images/logo128.png" },
   "background": {
     "scripts": ["background.js"],
     "persistent": false
